Programação às cegas de partes do projeto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
-br.com.letscode.service.ClientService/mp-rest/url=https://localhost:8080
+# url da aplicação
+quarkus-api/mp-rest/url=https://localhost:8080
+
+# datasource 
+quarkus.datasource.db-kind=h2
+quarkus.datasource.jdbc.driver=org.h2.Driver
+quarkus.datasource.jdbc.url=jdbc:h2:mem:lc-finale-quarkus
+quarkus.datasource.username=sa
+quarkus.datasource.password=sa
+
+# h2
+#quarkus.h2.console.enabled=true
+#quarkus.h2.console.path=/h2-console
+
+# Configuracao das portas para teste (obs: nao usar porta 8081 no windows)
+quarkus.http.test-port=8083
+quarkus.http.test-ssl-port=8446
