--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,8 @@ quarkus.datasource.jdbc.driver=org.h2.Driver
 quarkus.datasource.jdbc.url=jdbc:h2:mem:lc-finale-quarkus
 quarkus.datasource.username=sa
 quarkus.datasource.password=sa
-
-# h2
-#quarkus.h2.console.enabled=true
-#quarkus.h2.console.path=/h2-console
+quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.sql-load-script=META-INF/scripts/data.sql
 
 # Configuracao das portas para teste (obs: nao usar porta 8081 no windows)
 quarkus.http.test-port=8083
