Inclusão do Swagger :)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,13 @@ quarkus.hibernate-orm.sql-load-script=META-INF/scripts/data.sql
 # Configuracao das portas para teste (obs: nao usar porta 8081 no windows)
 quarkus.http.test-port=8083
 quarkus.http.test-ssl-port=8446
+
+# Configuração do swagger
+quarkus.swagger-ui.path=/api-docs
+quarkus.smallrye-openapi.path=/api-docs/json
+quarkus.swagger-ui.always-include=true
+
+%dev.quarkus.swagger-ui.path=/api-docs
+%dev.quarkus.smallrye-openapi.path=/api-docs/json
+%dev.quarkus.swagger-ui.always-include=true
+
